[package]
name = "actix-client"
version = "0.1.0"
authors = ["Daichi Hioki <hiokidaichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "*", features = ["ssl"] }
futures = "*"
actix-rt = "*"
actix-http = "*"
