[package]
name = "actix-web-client-sample"
version = "0.1.0"
authors = ["Daichi Hioki <hiokidaichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.7"
actix-web = "0.7"
futures = "*"
tokio = "*"
