[package]
name = "fileupload-dsample"
version = "0.1.0"
authors = ["Daichi Hioki <hiokidaichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.10.0"
base64 = "0.11.0"
failure = "0.1.6"
serde = "1.0.103"
serde_json = "1.0.44"
