[package]
name = "runtime-sample"
version = "0.1.0"
authors = ["Daichi Hioki <hiokidaichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "*"
actix-web = { version = "*", features = ["ssl"] }
failure = "*"
futures = "*"
serde = "*"
serde_derive = "*"
actix-http = "*"
