[package]
name = "yew-file-upload-sample"
version = "0.1.0"
authors = ["Daichi Hioki <hiokidaichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "*"
failure = "*"
stdweb = "*"
serde = "*"
serde_json = "*"
base64 = "*"
